--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cream World</title>
-    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Fredoka+One:wght@400&family=Nunito:wght@300;400;600;700&display=swap" rel="stylesheet">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet">
 </head>
@@ -18,8 +18,8 @@
             </div>
             <div class="nav-menu" id="navMenu">
                 <a href="index.html" class="nav-link active">Home</a>
-                <a href="pages/products.html" class="nav-link">Menu</a>
-                <a href="pages/cart.html" class="nav-link">
+                <a href="products.html" class="nav-link">Menu</a>
+                <a href="cart.html" class="nav-link">
                     <i class="fas fa-shopping-cart"></i>
                     Cart <span class="cart-count" id="cartCount">0</span>
                 </a>
@@ -42,7 +42,7 @@
                 </h1>
                 <p class="hero-subtitle">Magical flavors that make every moment sweeter</p>
                 <div class="hero-buttons">
-                    <a href="pages/products.html" class="btn btn-primary">
+                    <a href="products.html" class="btn btn-primary">
                         <i class="fas fa-star"></i>
                         Explore Flavors
                     </a>
@@ -147,8 +147,8 @@
                     <h4 class="footer-subtitle">Quick Links</h4>
                     <ul class="footer-links">
                         <li><a href="index.html">Home</a></li>
-                        <li><a href="pages/products.html">Menu</a></li>
-                        <li><a href="pages/cart.html">Cart</a></li>
+                        <li><a href="products.html">Menu</a></li>
+                        <li><a href="cart.html">Cart</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
@@ -166,6 +166,6 @@
         </div>
     </footer>
 
-    <script src="js/script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
